--- a/zb0328.conf
+++ b/zb0328.conf
@@ -1,5 +1,5 @@
-﻿﻿[Group]
-groupName=直播
+﻿[Group]
+groupName=央视直播
 CCTV-1综合,http://223.110.242.130:6610/cntv/live1/cctv-1/1.m3u8
 CCTV-2财经,http://223.110.242.130:6610/cntv/live1/cctv-2/1.m3u8
 CCTV-3综艺,http://223.110.242.130:6610/cntv/live1/cctv-3/1.m3u8
@@ -27,6 +27,8 @@ CCTV11,http://223.110.245.170/ott.js.chinamobile.com/PLTV/3/224/3221225552/index
 CCTV12高清,http://223.110.245.163/ott.js.chinamobile.com/PLTV/3/224/3221225556/index.m3u8
 CCTV13,http://223.110.245.170/ott.js.chinamobile.com/PLTV/3/224/3221225560/index.m3u8
 CCTV14超清,http://223.110.245.170/ott.js.chinamobile.com/PLTV/3/224/3221227201/index.m3u8
+﻿[Group]
+groupName=卫视直播
 北京卫视HD,http://223.110.243.173/PLTV/3/224/3221227246/index.m3u8
 北京卫视HD,http://117.169.72.6:8080/ysten-businessmobile/live/hdbeijingstv/1.m3u8
 安徽卫视FHD,http://223.110.245.147/ott.js.chinamobile.com/PLTV/3/224/3221225634/index.m3u8
