--- a/zb328.conf
+++ b/zb328.conf
@@ -1,5 +1,5 @@
 ﻿[Group]
-groupName=央视直播
+groupName=央视节目
 CCTV-1综合,http://223.110.242.130:6610/cntv/live1/cctv-1/1.m3u8
 CCTV-2财经,http://223.110.242.130:6610/cntv/live1/cctv-2/1.m3u8
 CCTV-3综艺,http://223.110.242.130:6610/cntv/live1/cctv-3/1.m3u8
