--- a/lb328.conf
+++ b/lb328.conf
@@ -1,4 +1,4 @@
-﻿﻿[Group]
+[Group]
 groupName=动画
 猫和老鼠,https://aldirect.hls.huya.com/huyalive/94525224-2475824398-10633584820048887808-2847687532-10057-A-0-1_1200.m3u8
 流浪地球,https://youku.com-l-youku.com/20190207/20335_d1f19bfb/index.m3u8
@@ -26,8 +26,7 @@ Newtv动画王国2,http://183.207.249.8/PLTV/3/224/3221225555/index.m3u8
 济南少儿频道,http://ts2.ijntv.cn/jnse/sd1/live.m3u8
 福州少儿,http://live1.fzntv.cn/live/zohi_fztv4/playlist.m3u8
 甘肃少儿频道,http://stream.gstv.com.cn/sepd/sd/live.m3u8
-
-﻿[Group]
+[Group]
 groupName=体育
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226580/index.m3u8
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226581/index.m3u8
@@ -37,14 +36,14 @@ groupName=体育
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226615/index.m3u8
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226619/index.m3u8
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226597/index.m3u8
-(黑色星期五)1,https://video.fjhps.com/20180302/7srg48ax/index.m3u8
-(黑色星期五)2,https://vip888.kuyun99.com/20180824/WJB07qKa/index.m3u8
-(黑色星期五)4,https://vip888.kuyun99.com/20180824/GaQcPLdG/index.m3u8
-(黑色星期五)5,https://vip888.kuyun99.com/20180824/HjxbFCCd/index.m3u8
-(黑色星期五)6,https://vip888.kuyun99.com/20180824/dsejI0LI/index.m3u8
-(黑色星期五)7,https://vip888.kuyun99.com/20180824/MMrikhSZ/index.m3u8
-(黑色星期五)8,http://vip.yingshidaqian.com/20180803/YBVdk7Zx/index.m3u8
-(黑色星期五)终结篇,http://zaixian.jingpin88.com/20180415/MkbFosFB/index.m3u8
+黑色星期五1,https://video.fjhps.com/20180302/7srg48ax/index.m3u8
+黑色星期五2,https://vip888.kuyun99.com/20180824/WJB07qKa/index.m3u8
+黑色星期五4,https://vip888.kuyun99.com/20180824/GaQcPLdG/index.m3u8
+黑色星期五5,https://vip888.kuyun99.com/20180824/HjxbFCCd/index.m3u8
+黑色星期五6,https://vip888.kuyun99.com/20180824/dsejI0LI/index.m3u8
+黑色星期五7,https://vip888.kuyun99.com/20180824/MMrikhSZ/index.m3u8
+黑色星期五8,http://vip.yingshidaqian.com/20180803/YBVdk7Zx/index.m3u8
+黑色星期五终结篇,http://zaixian.jingpin88.com/20180415/MkbFosFB/index.m3u8
 超级体育1 HD,http://39.134.52.162/wh7f454c46tw3498689980_663871177/hwottcdn.ln.chinamobile.com/PLTV/88888890/224/3221226019/index.m3u8
 超级体育2 HD,http://39.134.52.185/wh7f454c46tw3537423667_-945976133/hwottcdn.ln.chinamobile.com/PLTV/88888890/224/3221226020/index.m3u8
 超级体育3 HD,http://39.134.52.180/wh7f454c46tw3571653152_-2066612672/hwottcdn.ln.chinamobile.com/PLTV/88888890/224/3221226023/index.m3u8
@@ -65,11 +64,9 @@ NBA百视通直播间5HD,http://223.110.243.170/PLTV/2/224/3221226803/index.m3u8
 NBA百视通直播间6HD,http://223.110.243.170/PLTV/2/224/3221226805/index.m3u8
 NBA百视通直播间7HD,http://223.110.243.170/PLTV/2/224/3221226807/index.m3u8
 弈坛春秋1,http://223.110.245.139:80/PLTV/4/224/3221227031/index.m3u8
-弈坛春秋,http://183.207.248.71/gitv/live1/G_YITANCQ/G_YITANCQ
 gtv网络棋牌,http://cbn-pb.cbchot.com/live/ch071_1.m3u8
 电竞世界,http://223.110.245.167/ott.js.chinamobile.com/PLTV/3/224/3221226942/index.m3u8
-
-﻿[Group]
+[Group]
 groupName=电影轮播
 网球王子,https://aldirect.hls.huya.com/huyalive/29359996-2689609142-11551783303912620032-2847687544-10057-A-1525493612-1_1200.m3u8
 四驱兄弟,https://aldirect.hls.huya.com/huyalive/94525224-2472045388-10617354095687630848-2847687664-10057-A-1526356723-1_1200.m3u8
@@ -116,7 +113,6 @@ Newtv家庭剧场-1080P,http://183.207.249.14/PLTV/3/224/3221225549/index.m3u8
 我是你妈,https://youku.cdn-tudou.com/20180612/6361_e5847fe9/index.m3u8
 巴霍巴利王：开端 (2015),https://youku.cdn-163.com/20180506/6851_7ffde9de/index.m3u8
 巴霍巴利王2：终结 (2017),https://youku.cdn-tudou.com/20180605/6270_8af8cd4f/1000k/hls/index.m3u8
-末日重启4k,http://cdn.evomedia.cn/cms_asset/video/src/%5BViPHD%5D%E6%9C%AB%E6%97%A5%E9%87%8D%E5%90%AF%EF%BC%88%E5%A4%A7%E9%99%86%E5%85%AC%E6%98%A0%E5%8F%8C%E8%AF%AD%EF%BC%89%20Redivider.2017.R6.WEB-DL.2160P.H264.2Audio-JBY%40ViPHD.mp4
 血战湘江,http://yingshi.yazyzw.com/ppvod/15D6A529C80B2C3A794DC013D333F1FC.m3u8
 林正英,http://js.hls.huya.com/huyalive/94525224-2460686034-10568566041753944064-2789274542-10057-A-0-1_1200.m3u8
 王晶导演,https://aldirect.hls.huya.com/huyalive/94525224-2579683592-11079656661667807232-2847687574-10057-A-0-1_1200.m3u8
@@ -483,7 +479,6 @@ VIP电影3,http://chyd-wsvod.wasu.tv/data12/ott/344/2015-03/05/1425521511475_343
 电视剧-鹿鼎记-陈小春,http://alhls.cdn.zhanqi.tv/zqlive/245602_ApoFG.m3u8
 电视剧-家有儿女,http://alhls.cdn.zhanqi.tv/zqlive/199301_y2bWG.m3u8
 电视剧-后宫.甄嬛传,http://alhls.cdn.zhanqi.tv/zqlive/264417_dPUXM.m3u8
-
 电影解说-Sir说电影,https://ws.streamhls.huya.com/huyalive/1444295617-1444295617-6203202440771141632-4441426180-10057-A-0-1_1200/playlist.m3u8
 电影解说-说圣经,https://ws.streamhls.huya.com/huyalive/94525224-2583571962-11096357083652554752-3503038830-10057-A-0-1_1200/playlist.m3u8
 电影解说-爆笑解说,https://ws.streamhls.huya.com/huyalive/95275477-95275477-409205057825800192-173541658-10057-A-0-1_1200/playlist.m3u8
