--- a/lb328.conf
+++ b/lb328.conf
@@ -1,5 +1,5 @@
 [Group]
-groupName=动画
+groupName=轮播
 猫和老鼠,https://aldirect.hls.huya.com/huyalive/94525224-2475824398-10633584820048887808-2847687532-10057-A-0-1_1200.m3u8
 流浪地球,https://youku.com-l-youku.com/20190207/20335_d1f19bfb/index.m3u8
 舌尖上的中国,http://aldirect.hls.huya.com/huyalive/30765679-2523417472-10837995516394995712-2847699158-10057-A-1521181527-1_1200.m3u8
@@ -26,8 +26,6 @@ Newtv动画王国2,http://183.207.249.8/PLTV/3/224/3221225555/index.m3u8
 济南少儿频道,http://ts2.ijntv.cn/jnse/sd1/live.m3u8
 福州少儿,http://live1.fzntv.cn/live/zohi_fztv4/playlist.m3u8
 甘肃少儿频道,http://stream.gstv.com.cn/sepd/sd/live.m3u8
-[Group]
-groupName=体育
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226580/index.m3u8
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226581/index.m3u8
 熊猫ipanda,http://112.50.243.10/PLTV/88888888/224/3221226585/index.m3u8
@@ -66,8 +64,6 @@ NBA百视通直播间7HD,http://223.110.243.170/PLTV/2/224/3221226807/index.m3u8
 弈坛春秋1,http://223.110.245.139:80/PLTV/4/224/3221227031/index.m3u8
 gtv网络棋牌,http://cbn-pb.cbchot.com/live/ch071_1.m3u8
 电竞世界,http://223.110.245.167/ott.js.chinamobile.com/PLTV/3/224/3221226942/index.m3u8
-[Group]
-groupName=电影轮播
 网球王子,https://aldirect.hls.huya.com/huyalive/29359996-2689609142-11551783303912620032-2847687544-10057-A-1525493612-1_1200.m3u8
 四驱兄弟,https://aldirect.hls.huya.com/huyalive/94525224-2472045388-10617354095687630848-2847687664-10057-A-1526356723-1_1200.m3u8
 陆小凤传奇-张智霖,https://aldirect.hls.huya.com/huyalive/28466698-2689664968-11552023074756886528-3048991596-10057-A-0-1_1200.m3u8
@@ -89,7 +85,7 @@ groupName=电影轮播
 八仙饭店之人肉叉烧包,http://hao.zuida-youku.com/20170624/Bb728rKx/index.m3u8
 人肉叉烧包2之天诛地灭,http://hao.zuida-youku.com/20170624/peBzcBCu/index.m3u8
 伊波拉病毒,http://v2.yongjiujiexi.com/ppvod/4BFBC87819ECD2D574DC5AE04EF645F4.m3u8
-降头(粤语无字),https://youku.cdn2-youku.com/20180519/11386_2c9e569c/index.m3u8
+降头粤语无字,https://youku.cdn2-youku.com/20180519/11386_2c9e569c/index.m3u8
 Newtv惊悚悬疑-1080P,http://183.207.249.7/PLTV/3/224/3221225561/index.m3u8
 Newtv精品电影-1080P,http://183.207.249.14/PLTV/3/224/3221225567/index.m3u8
 Newtv明星大片-1080P,http://183.207.249.14/PLTV/3/224/3221225535/index.m3u8
@@ -106,13 +102,13 @@ Newtv家庭剧场-1080P,http://183.207.249.14/PLTV/3/224/3221225549/index.m3u8
 犬之岛(Isle-of-Dogs)2,https://vip.pp63.org/20180621/a9ne1wbx/hls/index.m3u8
 九门提督,https://vip.pp63.org/20180624/3TvSEnjj/index.m3u8
 九门提督2,https://vip.pp63.org/20180624/3TvSEnjj/500kb/hls/index.m3u8
-骨妹(国语),https://vip.pp63.org/20180624/RtJFgoAd/index.m3u8
-骨妹(国语)2,https://vip.pp63.org/20180624/RtJFgoAd/hls/index.m3u8
+骨妹国语,https://vip.pp63.org/20180624/RtJFgoAd/index.m3u8
+骨妹国语2,https://vip.pp63.org/20180624/RtJFgoAd/hls/index.m3u8
 爱欲故是,https://vip.pp63.org/20180622/96C9oF5n/hls/index.m3u8
 偷情别墅,https://vip.pp63.org/20180622/a2hENBDD/hls/index.m3u8
 我是你妈,https://youku.cdn-tudou.com/20180612/6361_e5847fe9/index.m3u8
-巴霍巴利王：开端 (2015),https://youku.cdn-163.com/20180506/6851_7ffde9de/index.m3u8
-巴霍巴利王2：终结 (2017),https://youku.cdn-tudou.com/20180605/6270_8af8cd4f/1000k/hls/index.m3u8
+巴霍巴利王：开端 2015,https://youku.cdn-163.com/20180506/6851_7ffde9de/index.m3u8
+巴霍巴利王2：终结 2017,https://youku.cdn-tudou.com/20180605/6270_8af8cd4f/1000k/hls/index.m3u8
 血战湘江,http://yingshi.yazyzw.com/ppvod/15D6A529C80B2C3A794DC013D333F1FC.m3u8
 林正英,http://js.hls.huya.com/huyalive/94525224-2460686034-10568566041753944064-2789274542-10057-A-0-1_1200.m3u8
 王晶导演,https://aldirect.hls.huya.com/huyalive/94525224-2579683592-11079656661667807232-2847687574-10057-A-0-1_1200.m3u8
@@ -374,7 +370,7 @@ VIP电影3,http://chyd-wsvod.wasu.tv/data12/ott/344/2015-03/05/1425521511475_343
 动漫-火神君,https://aldirect.hls.huya.com/huyalive/94525224-2604793726-11187503865995984896-3049003148-10057-A-0-1_1200.m3u8
 动漫-十万个冷笑话,https://aldirect.hls.huya.com/huyalive/94525224-2553630828-10967760892317401088-3049003140-10057-A-0-1_1200.m3u8
 动漫-峡谷重案组,https://aldirect.hls.huya.com/huyalive/94525224-2494645718-10714421773916438528-4482677220-10057-A-1526266615-1_1200.m3u8
-动漫-茶啊二中290218589（已满）,https://al.hls.huya.com/huyalive/94525224-2583266468-11095044996913430528-2633424538-10057-A-0-1_1200.m3u8
+动漫-茶啊二中,https://al.hls.huya.com/huyalive/94525224-2583266468-11095044996913430528-2633424538-10057-A-0-1_1200.m3u8
 动漫-1000种死法,https://aldirect.hls.huya.com/huyalive/29141112-2689666878-11552031278144421888-3049003116-10057-A-0-1_1200.m3u8
 动漫-火影忍者,http://alhls.cdn.zhanqi.tv/zqlive/41832_NfsIa.m3u8
 动漫-蜡笔小新,http://alhls.cdn.zhanqi.tv/zqlive/210915_Mg4QM.m3u8
